# ChangeLog for media-libs/tiff
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/tiff/ChangeLog,v 1.116 2009/05/09 10:55:54 ssuominen Exp $

  09 May 2009; Samuli Suominen <ssuominen@gentoo.org>
  -files/tiff-buffer.patch:
  Remove unused patch wrt #254179

  27 Nov 2008; Steve Arnold <nerdboy@gentoo.org> tiff-3.8.2-r4.ebuild,
  tiff-3.8.2-r5.ebuild, -files/tiff-3.8.2-goo-sec.patch:
  Incorporated both pdf and google security patches into a single patch 
  tarball and updated both versions (closes bug 248989).

  22 Sep 2008; Markus Meier <maekke@gentoo.org> -tiff-3.8.2-r2.ebuild:
  old

  22 Sep 2008; Markus Meier <maekke@gentoo.org> tiff-3.8.2-r2.ebuild:
  fix bug #238248 for all versions

  22 Sep 2008; Mike Frysinger <vapier@gentoo.org> tiff-3.8.2-r4.ebuild:
  Strip absolute path in patch so it can be applied with -p0 #238248.

  19 Sep 2008; Markus Meier <maekke@gentoo.org> tiff-3.8.2-r2.ebuild:
  drop to ~mips (unstable deps)

*tiff-3.8.2-r5 (19 Sep 2008)

  19 Sep 2008; Markus Meier <maekke@gentoo.org> -tiff-3.8.2-r3.ebuild,
  +tiff-3.8.2-r5.ebuild:
  bump, this should fix the tiff2pdf problem of bug #145055

  30 Aug 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  tiff-3.8.2-r4.ebuild:
  ppc stable, bug #234080

  26 Aug 2008; Raúl Porcel <armin76@gentoo.org> tiff-3.8.2-r4.ebuild:
  ia64/sparc stable wrt #234080

*tiff-3.8.2-r4 (26 Aug 2008)

  26 Aug 2008; Robert Buchholz <rbu@gentoo.org>
  +files/tiff-3.8.2-CVE-2008-2327.patch, +tiff-3.8.2-r4.ebuild:
  Fix buffer underflow in LZW encoding (CVE-2008-2327), straight to stable for
  alpha amd64 hppa ppc64 x86 (seccurity bug #234080)
  (Non-maintainer commit)

  04 Mar 2008; Markus Meier <maekke@gentoo.org> tiff-3.8.2-r2.ebuild,
  tiff-3.8.2-r3.ebuild:
  update HOMEPAGE, bug #212260

  13 Feb 2008; Santiago M. Mola <coldwind@gentoo.org> tiff-3.8.2-r3.ebuild:
  amd64 stable wrt bug #208547
