@@ -5,5 +5,6 @@ DIST tiff-3.8.2-pdfsec-patches.tar.bz2 23447 RMD160 4660ab880b3e7c308687f662fcb8
 DIST tiff-3.8.2.tar.gz 1336295 RMD160 1b4d825e3be08764e953fc58246d0c25ab4dd17d SHA1 549e67b6a15b42bfcd72fe17cda7c9a198a393eb SHA256 be88f037080b93ce0a337b2b3ca5e8195f76885deb6c558cc3aa872ee848fc76
 EBUILD tiff-3.8.2-r4.ebuild 1725 RMD160 b22bee75465c3b2209673535286883245e304652 SHA1 10dd6f362f1b11446cfde668fc5d81a2835631af SHA256 d21ea8744bd69dfcd9a2a102def86930bd2e751d9a83155ecac846ccb8f6acd8
 EBUILD tiff-3.8.2-r5.ebuild 1747 RMD160 e56b1ab06c6a2e3999b68fb4792a7cbd84811167 SHA1 52c0a9b9db4cd2ab457cb4d91f7f43869e83ddc8 SHA256 4964051308df5e4ae098472d2aceb728b9e8ba4c217dbb39ec0bdcbf1f5c67e2
-MISC ChangeLog 16021 RMD160 7e0db4f4a04e443ec33fe596847d86b3da1f8903 SHA1 ee990a454b073c64e57e53fbe6dc7b7bd092f893 SHA256 55ab5611ec95e36a110a4b12c38bb26dc75c77a7a4cf9ef22e40bbee2a61dd67
+EBUILD tiff-3.8.2-r6.ebuild 2694 RMD160 17f1496c8a310e25671e137e1f4df50280b88d49 SHA1 701ae726e600d72731bdcd3301a2f7c38c6706ec SHA256 7312930d11ccf2f44e28ced881e7501181a726ee682a5ea7ad981803ee6e4cfa
+MISC ChangeLog 16406 RMD160 f9132ddbb74b3f0b5b3d49a5548c97c222e5ad48 SHA1 a76bf79e8e60dc1949d6b8aa2e4df674b56d7457 SHA256 9744a0c7a8b4b091e65d5905acfbb1557cabff1ef5dd0cf052a92a896cd0ce01
 MISC metadata.xml 447 RMD160 8df7883ab02a353acd993037450e7bbc984c052d SHA1 8ffef6a88ae70afbdea7f3be25e1e9a28b6698c5 SHA256 ee7391b2521ef9676ead67466ad7249f05f8d3c9bd8d8984bc0ceac8dcb804b3
