@@ -1,6 +1,17 @@
 # ChangeLog for media-libs/tiff
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/tiff/ChangeLog,v 1.116 2009/05/09 10:55:54 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/tiff/ChangeLog,v 1.118 2009/06/23 08:23:12 flameeyes Exp $
+
+  23 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org>
+  tiff-3.8.2-r6.ebuild:
+  Fix dependencies.
+
+*tiff-3.8.2-r6 (23 Jun 2009)
+
+  23 Jun 2009; Steve Arnold <nerdboy@gentoo.org>
+  +files/tiff-3.8.2-opengl.patch, +tiff-3.8.2-r6.ebuild:
+  Updated and rev-bumped to add opengl and X-Windows support (bug #274092).
+  Opengl support should be considered somewhat experimental for now...
 
   09 May 2009; Samuli Suominen <ssuominen@gentoo.org>
   -files/tiff-buffer.patch:
